# Commercial-Detector

./: .gitignore  Modelfile  README.md  detect_commercials.py  evaluate_segment_detection.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: pipeline.yml  unit_tests.yml
detect_commercials/: main.py
src/: detect_commercials.py
tests/: test-cache.db  test_detect_commercials.py
