[project]
name = "commercial-detection"
version = "1.0.0"
description = "Detects and separates individual commercials from a videos containing them."
requires-python = ">=3.11.0"

[lint]
select = ["E", "F", "B", "ANN"]
ignore = ["E501", "ANN101", "ANN102"]  # Ignore long lines and self/cls type hints

[lint.flake8-annotations]
mypy-init-return = true  # Require return type on `__init__`